--- a/index.html
+++ b/index.html
@@ -1,27 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--
-   index.html
-   
-   Copyright 2021 Alex <Alex@ALEX_VM>
-   
-   This program is free software; you can redistribute it and/or modify
-   it under the terms of the GNU General Public License as published by
-   the Free Software Foundation; either version 2 of the License, or
-   (at your option) any later version.
-   
-   This program is distributed in the hope that it will be useful,
-   but WITHOUT ANY WARRANTY; without even the implied warranty of
-   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-   GNU General Public License for more details.
-   
-   You should have received a copy of the GNU General Public License
-   along with this program; if not, write to the Free Software
-   Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
-   MA 02110-1301, USA.
-   
-   
--->
+
 
 <head>
 <meta charset="utf-8" />
@@ -30,7 +9,7 @@
 </head>
 
 <body>
-<h1>Hello World</h1>
+<h1>Hello my friend</h1>
 <p>I'm hosted with GitHub Pages.</p>
 <p> This is my first document on GitHub.io Currently I am Leanring Web - course.</p>
 </body>
