changed css path

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta charset="utf-8" />
 <title>GitHub - WombatAu2020</title>
 <meta name="Server" content="GitHub" />
-<link href="./css/style.css" rel="stylesheet" type="text/css" media="all" />
+<link href="./style.css" rel="stylesheet" type="text/css" media="all" />
 </head>
 
 <body>
